# hc32f4-framework

./: .clangd  CMakeLists.txt  LICENSE  demo.jdebug
Config/linker/: HC32F460xE.ld
Core/Inc/: bsp.h  hc32f4xx_conf.h
Core/Src/: bsp.c  main.c
